Commit de prueba Modificar el servidor y el mensaje en la pagina web

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,6 +11,6 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     </head>
     <body>
         <h1>Pagina Inicial</h1>
-        <p>Esta es la primera pagina del curso Web y patrones</p>
+        <p>Esta es la primera pagina del curso Web y patrones, creada por Leonel Solis</p>
     </body>
 </html>
