Configuracion de S08 Bootstrap, template. Accion de editar y eliminar en CRUD

--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -23,8 +23,10 @@ Leonel Solis
                     <ul>
                             <li><a href ="login.html">LOGIN</a></li>
                             <li><a href ="home.html">HOME</a></li>
-                            <li><a href ="index.html">ABOUT</a></li>
-                            <li><a href ="">PROFILE</a></li>
+                            <li><a href ="index.html">INDEX</a></li>
+                            <li><a href ="videos.html">VIDEOS</a></li>
+                            <li><a href ="templates/crear.html">PersonasN</a></li>
+                            <li><a href ="templates/personas.html">Lista Personas</a></li>
                     </ul>
                 </nav>
                 <img src="images/cart.png">
